--- a/views/about.html
+++ b/views/about.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="home">
+<body class="about">
 
     <header>
     <nav>
@@ -20,6 +20,6 @@
     </nav>
 </header>
 
-    <h1>twist in my reality</h1>
+    <h1>About</h1>
 </body>
 </html>
