--- a/views/about.html
+++ b/views/about.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li> <a href=""> home </a> </li>
-            <li> <a href="/about"> about </a> </li>
+            <li> <a href="/abouttttttt"> about </a> </li>
             <li> <a href=""> music </a> </li>
             <li> <a href=""> contact </a> </li>
         </ul>
